--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,36 @@
-theme: jekyll-theme-cayman
+title: Sven van Rijen's blog
+description: > # this means to ignore newlines until "baseurl:"
+  Sven van Rijen's blog with all kinds of technical IT related topics.
+permalink: ':title/'
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://www.svenvanrijen.nl" # the base hostname & protocol for your site, e.g. http://example.com
+site-twitter: svenvanrijen #if your site has a twitter account, enter it here
+
+# Author Settings
+author: Sven van Rijen # add your name
+author-img: sven-van-rijen.jpg # add your photo
+about-author:  Senior Engineer, mainly working on (client) OS Deployment and Management # add description
+social-twitter: svenvanrijen # add your Twitter handle
+social-facebook: # add your Facebook handle
+social-github: svenvanrijen # add your Github handle
+social-linkedin: svenvanrijen # add your Linkedin handle
+social-email: sven@svenvanrijen.nl # add your Email address
+
+# Disqus
+discus-identifier: svenvanrijen # add your discus identifier
+
+# Tracker
+analytics: UA-88497167-1 # Google Analytics
+
+# Build Settings
+markdown: kramdown
+plugins:
+  - jekyll-sitemap
+  - jekyll-paginate
+  - jemoji
+  - jekyll-feed
+
+paginate: 8
+paginate_path: "/page/:num"
+
+exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
